fixing SSL on Firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -466,16 +466,6 @@ p.snowplow-caption-minor {
 	}
 }
 
-#logo-and-buttons {
-	border: 2px solid rgb(0,97,152);
-	padding: 2px;
-}
-
-#new-to-site {
-	border: 2px solid rgb(241,167,16);
-	padding: 2px;
-}
-
 .homepage .simple_form {
 	div.user_session_email {
 		margin-bottom: 6px;
